tests/fixtures/errors/postprocess/variants/wrong-default-export/postprocess.js
module.exports = require("./hack")({
  postproceess: function () {},
});
